tekton_ci/triggers/templates/github/template-event-listener-ingress.yml
# INGRESS RESOURCE FOR GITHUB TRIGGER
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME_PLACEHOLDER-TEAM_PLACEHOLDER-event-listener-ingress
  labels:
    managed-by: kubementat
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: APP_NAME_PLACEHOLDER.trigger-hooks.TEAM_PLACEHOLDER.BASE_DOMAIN_PLACEHOLDER
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: el-APP_NAME_PLACEHOLDER-TEAM_PLACEHOLDER-event-listener
                port:
                  number: 8080
  tls:
    - hosts:
        - APP_NAME_PLACEHOLDER.trigger-hooks.TEAM_PLACEHOLDER.BASE_DOMAIN_PLACEHOLDER
      secretName: APP_NAME_PLACEHOLDER-trigger-hooks-TEAM_PLACEHOLDER-tls-secret
